# machines

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml
machines/: __init__.py  cli.py  common.py  decorators.py  factory.py  filedb.py  graph.py  handlers.py  io.py  machine.py  parameters.py  parsers.py  session.py  storages.py  target.py  targetpath.py  task.py  toolbox.py  utils.py
resources/: aggtest.py  batch_complicated.yml  batch_simple.yml  batch_syntax.yml  dummy.py  example.py  example2.py  example3.py  long.py  tasks.yml
test/: test_decorators.py  test_export.py  test_factory.py  test_filedb.py  test_handlers.py  test_io.py  test_machine.py  test_parameters.py  test_parsers.py  test_session.py  test_storages.py  test_target.py  test_targetpath.py  test_toolbox.py  test_utils.py
